# tasktab

./: .gitignore  AGENTS.md  CHANGELOG.md  INDEX.md  PROJECT_PROGRESS.md
app/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  actions.ts  styles.css  sync.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: generate_icon.py  icon.icns
app/src-tauri/src/: board.rs  lib.rs  main.rs  registry.rs  sync.rs  watcher.rs
app/src/components/: Card.tsx  ConfirmDialog.tsx  Detail.tsx  Mermaid.tsx  Toast.tsx
archive/: crop_icon_v2.py  generate_icon_rainbow_v1.py
archive/kanban-retired/: SKILL.md
archive/progress-tracker/: SKILL.md
archive/push-retired/: README.md  push.rs
cli/: cra.py
docs/: trio-protocol.md
scripts/: dev-detached.sh  dev-stop.sh  install.sh
server/: Dockerfile  README.md  build.sh  github.go  go.mod  main.go  parse.go  parse_test.go  registry.yaml  util.go
server/deploy/: tasktab-kanban.yml
server/web/: index.html
skill/kanban/: SKILL.md
skill/progress-tracker/: SKILL.md
同步看板files/: 00-README.md  01-大白话说明书.md  02-实现步骤.md  03-SKILL创建规则.md
